<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, psa!</string>
    <string name="app_name">Poetry Slam Arbiter</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="ca">Clear all</string>
    <string name="cl">Clear last</string>
    <string name="avg">Avg</string>
    <string name="median">Median</string>
</resources>
