<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:text="@string/hello" android:id="@+id/textView1"
		android:layout_height="wrap_content" android:layout_width="fill_parent"></TextView>

	<TableLayout android:id="@+id/tableLayout1"
		android:layout_height="wrap_content" android:layout_width="fill_parent">

		<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button android:id="@+id/button1" android:text="@string/one"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button2" android:text="@string/two"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button3" android:text="@string/three"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
		</TableRow>
		
		<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button android:id="@+id/button4" android:text="@string/four"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button5" android:text="@string/five"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button6" android:text="@string/six"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
		</TableRow>

		<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button android:id="@+id/button7" android:text="@string/seven"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button8" android:text="@string/eight"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			<Button android:id="@+id/button9" android:text="@string/nine"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
		</TableRow>
		
		<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button android:text="@string/ca"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnCa"></Button>
			<Button android:text="@string/ten"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button10"></Button>
			<Button android:text="@string/cl"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnCl"></Button>
		</TableRow>
		
		<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/median"
				android:id="@+id/textView3"></TextView>
			<EditText android:text="EditText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/medianResult"></EditText>
		</TableRow>
		
		<TableRow android:id="@+id/tableRow6" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/avg"
				android:id="@+id/textView2"></TextView>
			<EditText android:text="EditText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/avgResult"></EditText>
		</TableRow>

	</TableLayout>

</LinearLayout>
